// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EarnList  should match snapshot when lpChoice L1LP 1`] = `
<DocumentFragment>
  <div
    class="sc-dAbbOL kfujas"
    data-testid="earn-list-item"
  >
    <div
      class="sc-aXZVg krHmEs sc-kpDqfm hvflIl"
    >
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 225px;"
      >
        <div
          class="sc-aXZVg krHmEs sc-iGgWBj xSUkw"
        >
          <div
            class="sc-gEvEer Potal"
          >
            <div
              class="sc-aXZVg krHmEs"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/usdc.svg"
                />
              </div>
              <div>
                <p
                  class="sc-eqUAAy ibYEEy"
                >
                  USDC
                </p>
                <p
                  class="sc-fqkvVR jpBRQY"
                >
                  USD Coin
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 145px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 115px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 85px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 90px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 110px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 75px;"
      >
        <div
          class="sc-feUZmu ceIvoQ"
          data-testid="action-btn"
        >
          <div
            class="sc-fUnMCh euYGlO"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when lpChoice L2LP 1`] = `
<DocumentFragment>
  <div
    class="sc-dAbbOL kfujas"
    data-testid="earn-list-item"
  >
    <div
      class="sc-aXZVg krHmEs sc-kpDqfm hvflIl"
    >
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 225px;"
      >
        <div
          class="sc-aXZVg krHmEs sc-iGgWBj xSUkw"
        >
          <div
            class="sc-gEvEer Potal"
          >
            <div
              class="sc-aXZVg krHmEs"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/usdc.svg"
                />
              </div>
              <div>
                <p
                  class="sc-eqUAAy ibYEEy"
                >
                  USDC
                </p>
                <p
                  class="sc-fqkvVR jpBRQY"
                >
                  USD Coin
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 145px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 115px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 85px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 90px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 110px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 75px;"
      >
        <div
          class="sc-feUZmu ceIvoQ"
          data-testid="action-btn"
        >
          <div
            class="sc-fUnMCh euYGlO"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when lpChoice empty 1`] = `
<DocumentFragment>
  <div
    class="sc-dAbbOL kfujas"
    data-testid="earn-list-item"
  >
    <div
      class="sc-aXZVg krHmEs sc-kpDqfm hvflIl"
    >
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 225px;"
      >
        <div
          class="sc-aXZVg krHmEs sc-iGgWBj xSUkw"
        >
          <div
            class="sc-gEvEer Potal"
          >
            <div
              class="sc-aXZVg krHmEs"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/usdc.svg"
                />
              </div>
              <div>
                <p
                  class="sc-eqUAAy ibYEEy"
                >
                  USDC
                </p>
                <p
                  class="sc-fqkvVR jpBRQY"
                >
                  USD Coin
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 145px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 115px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 85px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 90px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 110px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 75px;"
      >
        <div
          class="sc-feUZmu ceIvoQ"
          data-testid="action-btn"
        >
          <div
            class="sc-fUnMCh euYGlO"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when showMystake is disabled 1`] = `
<DocumentFragment>
  <div
    class="sc-dAbbOL kfujas"
    data-testid="earn-list-item"
  >
    <div
      class="sc-aXZVg krHmEs sc-kpDqfm hvflIl"
    >
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 225px;"
      >
        <div
          class="sc-aXZVg krHmEs sc-iGgWBj xSUkw"
        >
          <div
            class="sc-gEvEer Potal"
          >
            <div
              class="sc-aXZVg krHmEs"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/usdc.svg"
                />
              </div>
              <div>
                <p
                  class="sc-eqUAAy ibYEEy"
                >
                  USDC
                </p>
                <p
                  class="sc-fqkvVR jpBRQY"
                >
                  USD Coin
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 145px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 115px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 85px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 90px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 110px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 75px;"
      >
        <div
          class="sc-feUZmu ceIvoQ"
          data-testid="action-btn"
        >
          <div
            class="sc-fUnMCh euYGlO"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when showMystake is enable 1`] = `<DocumentFragment />`;

exports[`EarnList  should match snapshot when userInfo or poolInfo is empty 1`] = `
<DocumentFragment>
  <div
    class="sc-dAbbOL kfujas"
    data-testid="earn-list-item"
  >
    <div
      class="sc-aXZVg krHmEs sc-kpDqfm hvflIl"
    >
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 225px;"
      >
        <div
          class="sc-aXZVg krHmEs sc-iGgWBj xSUkw"
        >
          <div
            class="sc-gEvEer Potal"
          >
            <div
              class="sc-aXZVg krHmEs"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/undefined.svg"
                />
              </div>
              <div>
                <p
                  class="sc-eqUAAy ibYEEy"
                />
                <p
                  class="sc-fqkvVR jpBRQY"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 145px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 115px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 85px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          NaN
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 90px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 110px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 75px;"
      >
        <div
          class="sc-feUZmu ceIvoQ"
          data-testid="action-btn"
        >
          <div
            class="sc-fUnMCh euYGlO"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EarnList  should match snapshot when userreward is available 1`] = `
<DocumentFragment>
  <div
    class="sc-dAbbOL kfujas"
    data-testid="earn-list-item"
  >
    <div
      class="sc-aXZVg krHmEs sc-kpDqfm hvflIl"
    >
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 225px;"
      >
        <div
          class="sc-aXZVg krHmEs sc-iGgWBj xSUkw"
        >
          <div
            class="sc-gEvEer Potal"
          >
            <div
              class="sc-aXZVg krHmEs"
            >
              <div>
                <img
                  alt="logo"
                  class="sc-dcJsrY khyFAh"
                  src="https://raw.githubusercontent.com/bobanetwork/token-list/main/assets/boba.svg"
                />
              </div>
              <div>
                <p
                  class="sc-eqUAAy ibYEEy"
                >
                  BOBA
                </p>
                <p
                  class="sc-fqkvVR jpBRQY"
                >
                  Boba Token
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 145px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          614.83
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 115px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          565.3
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 85px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 90px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          43.01
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 110px;"
      >
        <p
          class="sc-imWYAI dZiXLh"
        >
          0.00126
        </p>
      </div>
      <div
        class="sc-aXZVg krHmEs sc-dAlyuH iRhOjN"
        style="max-width: 75px;"
      >
        <div
          class="sc-feUZmu ceIvoQ"
          data-testid="action-btn"
        >
          <div
            class="sc-fUnMCh euYGlO"
          >
            <div>
              <div
                data-src="actions.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
